remove spacing between tab buttons

--- a/HazardShieldUI/mainwindow.ui
+++ b/HazardShieldUI/mainwindow.ui
@@ -38,6 +38,9 @@
     </property>
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
       <item>
        <widget class="QPushButton" name="pushButton">
         <property name="text">
